--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.sukhjinder.music.MainActivity">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/title"
@@ -11,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:paddingTop="10dp"
-        android:text="Main Screen"
+        android:text="Search"
         android:textSize="25sp"
         android:textStyle="bold" />
 
@@ -23,7 +21,7 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:paddingTop="50dp"
-        android:text="Displays \n - Recently played songs \n - Popular songs \n - Songs by genre " />
+        android:text="Displays a search bar that allows you to search through songs on your device by title, artist, album" />
 
     <TextView
         android:id="@+id/implementationTitle"
@@ -43,36 +41,25 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/implementationTitle"
         android:layout_centerHorizontal="true"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:text="- Retrieves recently played music and displays it \n - Displays popular songs retrieved from lastfm api \n - When user selects popular song the request is forwarded to the store activity" />
+        android:text="- Create a database of all songs on the device \n - Add sort ability based on title, artist, album" />
 
     <Button
         android:id="@+id/songButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/implementation"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="83dp"
+        android:layout_alignEnd="@+id/implementationTitle"
+        android:layout_alignRight="@+id/implementationTitle"
+        android:layout_centerVertical="true"
         android:text="Songs" />
 
     <Button
-        android:id="@+id/searchButton"
+        android:id="@+id/nowPlayingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/songButton"
         android:layout_toLeftOf="@+id/songButton"
         android:layout_toStartOf="@+id/songButton"
-        android:text="Search" />
-
-    <Button
-        android:id="@+id/storeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/songButton"
-        android:layout_toEndOf="@+id/songButton"
-        android:layout_toRightOf="@+id/songButton"
-        android:text="@string/store" />
+        android:text="Now Playing" />
 
 
 </RelativeLayout>
